logs/awasu-api.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/awasu_api'...
Compiling './lib/python3.5/site-packages/awasu_api/api.py'...
***   File "./lib/python3.5/site-packages/awasu_api/api.py", line 329
    except AwasuApiException , xcptn :
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awasu_api/console.py'...
***   File "./lib/python3.5/site-packages/awasu_api/console.py", line 46
    print "{} [options] [api-name] [arg1] [arg2] ...".format( script_name )
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awasu_api/utils.py'...
***   File "./lib/python3.5/site-packages/awasu_api/utils.py", line 40
    print prefix \
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/awasu_api-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
